--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -42,17 +42,17 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    name: ${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.install-from }}
+    name: ${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.kind }}
     strategy:
       fail-fast:  false
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        install-from: ['conda', 'source', 'dist']
+        kind: ['conda', 'source', 'dist']
 
         exclude:
           # Exclude all configurations *-*-dist, include one later
-          - install-from: 'dist'
+          - kind: 'dist'
 
           # Exclude windows as bash commands wont work in windows runner
           - os: windows-latest
@@ -64,13 +64,14 @@ jobs:
           # Add the tag code-cov to ubuntu-3.7-source
           - os: ubuntu-latest
             python-version: 3.7
-            install-from: 'source'
+            kind: 'source'
             code-cov: true
 
           # Include one config with dist, ubunut-3.7-dist
           - os: ubuntu-latest
             python-version: 3.7
-            install-from: 'dist'
+            kind: 'dist'
+
     steps:
 
     - name: Checkout
@@ -82,7 +83,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Conda install
-      if: matrix.install-from == 'conda'
+      if: matrix.kind == 'conda'
       run: |
         # Miniconda is available in $CONDA env var
         $CONDA/bin/conda create -n testenv --yes pip wheel gxx_linux-64 gcc_linux-64 swig python=${{ matrix.python-version }}
@@ -90,13 +91,13 @@ jobs:
         $CONDA/envs/testenv/bin/pip3 install -e .[all]
 
     - name: Source install
-      if: matrix.install-from == 'source'
+      if: matrix.kind == 'source'
       run: |
         python -m pip install --upgrade pip
         pip install -e .[all]
 
     - name: Dist install
-      if: matrix.install-from == 'dist'
+      if: matrix.kind == 'dist'
       run: |
         python -m pip install --upgrade pip
         python setup.py sdist
@@ -108,26 +109,19 @@ jobs:
       run: |
         echo "::set-output name=BEFORE::$(git status --porcelain -b)"
 
-    - name: Conda tests
+    - name: Tests
       timeout-minutes: 45
-      if: matrix.install-from == 'conda'
       run: |
-        PYTHON=$CONDA/envs/testenv/bin/python3
+        if [[ ${{ matrix.kind }} == 'conda' ]]; then
+          PYTHON=$CONDA/envs/testenv/bin/python3
+        else:
+          PYTHON=$(which python3)
+        fi
 
         if [ ${{ matrix.code-cov }} ]; then
           $PYTHON -m pytest ${{ env.pytest-args }} ${{ env.code-cov-args }} test
         else
           $PYTHON -m pytest ${{ env.pytest-args }} test
-        fi
-
-    - name: Source tests
-      timeout-minutes: 45
-      if: matrix.install-from == 'source'
-      run: |
-        if [ ${{ matrix.code-cov }} ]; then
-          pytest ${{ env.pytest-args }} ${{ env.code-cov-args }} test
-        else
-          pytest ${{ env.pytest-args }} test
         fi
 
     - name: Check for files left behind by test
