--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,4 +1,4 @@
-name: Command-line Examples
+name: examples
 
 on:
   # Manual trigger option in github
@@ -31,27 +31,31 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Conda Install test dependencies
       run: |
         # Miniconda is available in $CONDA env var
         $CONDA/bin/conda create -n testenv --yes pip wheel gxx_linux-64 gcc_linux-64 swig python=${{ matrix.python-version }}
         $CONDA/envs/testenv/bin/python3 -m pip install --upgrade pip
         $CONDA/envs/testenv/bin/pip3 install -e .[all]
-    - name: Spear-QCP ROAR
+
+    - name: Spear-QCP ROAR (Commandline)
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
         bash spear_qcp_roar.sh
-    - name: Spear-QCP SMAC
+        
+    - name: Spear-QCP SMAC (Commandline)
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
         bash spear_qcp_smac.sh
-    - name:  Branin
+
+    - name:  Branin (Commandline)
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
