--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -43,7 +43,8 @@ jobs:
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
-        export PATH="$CONDA/envs/testenv/bin:$PATH"
+        # export PATH="$CONDA/envs/testenv/bin:$PATH"
+
         $CONDA/bin/activate testenv
         cd examples/commandline
         bash spear_qcp_roar.sh
@@ -52,7 +53,8 @@ jobs:
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
-        export PATH="$CONDA/envs/testenv/bin:$PATH"
+        # export PATH="$CONDA/envs/testenv/bin:$PATH"
+
         $CONDA/bin/activate testenv
         cd examples/commandline
         bash spear_qcp_smac.sh
@@ -61,7 +63,8 @@ jobs:
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
-        export PATH="$CONDA/envs/testenv/bin:$PATH"
+        # export PATH="$CONDA/envs/testenv/bin:$PATH"
+        
         $CONDA/bin/activate testenv
         cd examples/commandline
         python ../../scripts/smac.py --scenario branin/scenario.txt
